--- a/demo-cluster/.k8s-gen/app-manifests.yaml
+++ b/demo-cluster/.k8s-gen/app-manifests.yaml
@@ -27,7 +27,7 @@ spec:
     requests.cpu: "1"  
     requests.memory: "1Gi" 
     limits.cpu: "1"  
-    limits.memory: "1Gi" 
+    limits.memory: "1536Mi" 
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
