--- a/demo-cluster/.k8s-gen/app-manifests.yaml
+++ b/demo-cluster/.k8s-gen/app-manifests.yaml
@@ -1,1 +1,77 @@
 ---
+apiVersion: argoproj.io/v1alpha1
+kind: AppProject
+metadata:
+  name: user
+  namespace: argocd
+spec:
+  description: User project
+  destinations:
+    - server: https://kubernetes.default.svc
+      namespace: music
+  sourceRepos:
+    - https://linsun.github.io/chat-app-charts/
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: music
+---
+apiVersion: v1
+kind: ResourceQuota
+metadata:
+  name: compute-quota
+  namespace: music
+spec:
+  hard:
+    requests.cpu: "1"  
+    requests.memory: "1Gi" 
+    limits.cpu: "1"  
+    limits.memory: "1280Mi" 
+---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: chat-app
+  namespace: argocd
+spec:
+  destination:
+    namespace: music
+    server: https://kubernetes.default.svc
+  project: user
+  revisionHistoryLimit: 3
+  sources:
+  - chart: chat-app
+    helm:
+      values: |
+        replicaCount: 3
+
+        resources: 
+          limits:
+            cpu: 1500m
+            memory: 128Mi
+          requests:
+            cpu: 100m
+            memory: 128Mi
+
+        nodeSelector:
+          role: storage
+        
+        tolerations:
+          - key: role
+            value: storage
+            operator: Equal
+            effect: NoSchedule
+      
+        service:
+          type: LoadBalancer
+
+        imagePullSecrets: 
+          - game-2048-pull-secret
+          
+    repoURL: https://linsun.github.io/chat-app-charts/
+    targetRevision: "0.2.0"
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
