--- a/demo-cluster/.k8s-gen/app-manifests.yaml
+++ b/demo-cluster/.k8s-gen/app-manifests.yaml
@@ -27,7 +27,7 @@ spec:
     requests.cpu: "1"  
     requests.memory: "1Gi" 
     limits.cpu: "1"  
-    limits.memory: "1280Mi" 
+    limits.memory: "1280Mi"
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
@@ -45,30 +45,26 @@ spec:
     helm:
       values: |
         replicaCount: 1
-
-        resources: 
+        resources:
           limits:
-            cpu: 200m
-            memory: 128Mi
+            cpu: 2500m
+            memory: 1Gi
           requests:
-            cpu: 100m
-            memory: 128Mi
-
+            cpu: 250m
+            memory: 512Mi
         nodeSelector:
           role: storage
-        
+
         tolerations:
           - key: role
             value: storage
             operator: Equal
             effect: NoSchedule
-      
+
         service:
           type: LoadBalancer
-
         imagePullSecrets: 
           - game-2048-pull-secret
-          
     repoURL: https://linsun.github.io/chat-app-charts/
     targetRevision: "0.1.0"
   syncPolicy:
