--- a/demo-cluster/.k8s-gen/app-manifests.yaml
+++ b/demo-cluster/.k8s-gen/app-manifests.yaml
@@ -45,6 +45,10 @@ spec:
     helm:
       values: |
         replicaCount: 1
+
+        image:
+          tag: "v5"
+
         resources:
           limits:
             cpu: 500m
@@ -54,10 +58,8 @@ spec:
             memory: 512Mi
         service:
           type: LoadBalancer
-        redis:
-          enabled: false
     repoURL: https://linsun.github.io/chat-app-charts/
-    targetRevision: "0.2.0"
+    targetRevision: "0.1.0"
   syncPolicy:
     automated:
       prune: true
