--- a/demo-resources/scenario-3/3-chat-app.yaml
+++ b/demo-resources/scenario-3/3-chat-app.yaml
@@ -27,7 +27,7 @@ spec:
     requests.cpu: "1"  
     requests.memory: "1Gi" 
     limits.cpu: "1"  
-    limits.memory: "1280Mi"
+    limits.memory: "2Gi"
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
@@ -45,6 +45,10 @@ spec:
     helm:
       values: |
         replicaCount: 1
+
+        image:
+          tag: "v5"
+
         resources:
           limits:
             cpu: 2500m
@@ -52,9 +56,9 @@ spec:
           requests:
             cpu: 250m
             memory: 512Mi
+
         nodeSelector:
           role: storage
-
         tolerations:
           - key: role
             value: storage
@@ -63,8 +67,10 @@ spec:
 
         service:
           type: LoadBalancer
+
         imagePullSecrets: 
           - game-2048-pull-secret
+          
     repoURL: https://linsun.github.io/chat-app-charts/
     targetRevision: "0.1.0"
   syncPolicy:
