--- a/demo-cluster/.k8s-gen/app-manifests.yaml
+++ b/demo-cluster/.k8s-gen/app-manifests.yaml
@@ -1,27 +1,13 @@
----
-apiVersion: argoproj.io/v1alpha1
-kind: AppProject
-metadata:
-  name: user
-  namespace: argocd
-spec:
-  description: User project
-  destinations:
-    - server: https://kubernetes.default.svc
-      namespace: music
-  sourceRepos:
-    - https://linsun.github.io/chat-app-charts/
----
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: music
+  name: demo-oss-japan
 ---
 apiVersion: v1
 kind: ResourceQuota
 metadata:
-  name: compute-quota
-  namespace: music
+  name: demo-oss-japan-quota
+  namespace: demo-oss-japan
 spec:
   hard:
     requests.cpu: "1"  
@@ -30,39 +16,15 @@ spec:
     limits.memory: "2Gi"
 ---
 apiVersion: argoproj.io/v1alpha1
-kind: Application
+kind: AppProject
 metadata:
-  name: chat-app
+  name: demo-oss-japan
   namespace: argocd
 spec:
-  destination:
-    namespace: music
-    server: https://kubernetes.default.svc
-  project: user
-  revisionHistoryLimit: 3
-  sources:
-  - chart: chat-app
-    helm:
-      values: |
-        replicaCount: 1
-
-        image:
-          tag: "v5"
-
-        resources:
-          limits:
-            cpu: 500m
-            memory: 1Gi
-          requests:
-            cpu: 250m
-            memory: 512Mi
-
-        service:
-          type: LoadBalancer
-          
-    repoURL: https://linsun.github.io/chat-app-charts/
-    targetRevision: "0.1.0"
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+  description: Demo project
+  destinations:
+    - server: https://kubernetes.default.svc
+      namespace: demo-oss-japan
+  #sourceRepos:
+  #  - http://daocloud.github.io/dao-2048/
+---
