--- a/demo-cluster/.k8s-gen/app-manifests.yaml
+++ b/demo-cluster/.k8s-gen/app-manifests.yaml
@@ -16,6 +16,46 @@ spec:
     limits.memory: "2Gi"
 ---
 apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: game-2048
+  namespace: argocd
+spec:
+  destination:
+    namespace: demo-oss-japan
+    server: https://kubernetes.default.svc
+  project: user
+  revisionHistoryLimit: 3
+  sources:
+  - chart: dao-2048
+    helm:
+      values: |
+        replicaCount: 3
+
+        resources: 
+          limits:
+            cpu: 1500m
+            memory: 128Mi
+          requests:
+            cpu: 100m
+            memory: 128Mi
+
+        nodeSelector:
+          role: storage
+        
+        tolerations:
+          - key: role
+            value: storage
+            operator: Equal
+            effect: NoSchedule
+      
+        service:
+          type: LoadBalancer
+
+        imagePullSecrets: 
+          - game-2048-pull-secret
+---
+apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
   name: demo-oss-japan
