--- a/demo-resources/scenario-1/1-game-app.yaml
+++ b/demo-resources/scenario-1/1-game-app.yaml
@@ -1,34 +1,3 @@
----
-apiVersion: argoproj.io/v1alpha1
-kind: AppProject
-metadata:
-  name: user
-  namespace: argocd
-spec:
-  description: User project
-  destinations:
-    - server: https://kubernetes.default.svc
-      namespace: game-2048
-  sourceRepos:
-    - http://daocloud.github.io/dao-2048/
----
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: game-2048
----
-apiVersion: v1
-kind: ResourceQuota
-metadata:
-  name: compute-quota
-  namespace: game-2048
-spec:
-  hard:
-    requests.cpu: "1"  
-    requests.memory: "1Gi" 
-    limits.cpu: "1"  
-    limits.memory: "1Gi" 
----
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -36,7 +5,7 @@ metadata:
   namespace: argocd
 spec:
   destination:
-    namespace: game-2048
+    namespace: demo-oss-japan
     server: https://kubernetes.default.svc
   project: user
   revisionHistoryLimit: 3
@@ -68,11 +37,3 @@ spec:
 
         imagePullSecrets: 
           - game-2048-pull-secret
-
-    repoURL: http://daocloud.github.io/dao-2048/
-    targetRevision: "1.2.1"
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
-
