--- a/demo-cluster/.k8s-gen/policy.yaml
+++ b/demo-cluster/.k8s-gen/policy.yaml
@@ -3,7 +3,7 @@ kind: ClusterPolicy
 metadata:
   name: require-resources
 spec:
-  validationFailureAction: enforce
+  validationFailureAction: audit
   rules:
     - name: check-container-resources
       match:
