--- a/demo-resources/kyverno-mcp.yaml
+++ b/demo-resources/kyverno-mcp.yaml
@@ -9,8 +9,9 @@ metadata:
 spec:
   deployment:
     args:
-    - 'stdio'
+      - --http-addr
+      - :8000
     cmd: "/server/github-mcp-server"
     image: ghcr.io/nirmata/kyverno-mcp:v0.2.2
-    port: 65532
+    port: 8000
   transportType: stdio
