--- a/demo-cluster/.k8s-gen/kyverno/gitops-kyverno-agent-short.yaml
+++ b/demo-cluster/.k8s-gen/kyverno/gitops-kyverno-agent-short.yaml
@@ -85,6 +85,7 @@ spec:
         ## Validation Pipeline
 
         1. Desired State Extraction
+        
         - Parse input YAML, focusing on argoproj.io/v1alpha1, kind=Application.
         - For each Application, extract: repoURL, chart, targetRevision, values, namespace.
         - Merge .helm.values and .helm.parameters into one Helm config.
@@ -92,29 +93,17 @@ spec:
         - Render the desired manifests via Helm dry-run (equivalent to `helm upgrade --install --dry-run --output yaml`).
         - Combine rendered resources with the input manifest → full desired state.
 
-        2. Drift Comparison (CREATE vs UPDATE vs NO CHANGE)
-        For each desired resource:
-        - Identity key: (apiGroup + apiVersion, kind, namespace (or cluster-scoped), metadata.name).
+        2. Drift Comparison
 
-        Existence check:
-        - Use `k8s_get_resources` targeting this exact resource
-          (apiVersion/kind + namespace + name selector).
-        - If at least one matching resource exists → live object exists.
-        - If no matching resource → live object does NOT exist.
+          For each resource of the full desired state (produced in step 1):
+          * **MANDATORY RESOURCE STATUS DETERMINATION:**
+            1.  **If Desired resource does not exist in the live cluster (kubectl fails):** The Action is **CREATE**.
+            2.  **If Desired resource exists in the live cluster:** The Action is **UPDATE** (if fields differ) or **NO CHANGE** (if fields match).
+          * Output summary table:
 
-        Action:
-        - If no live object → Action = CREATE.
-        - If live object exists:
-          - Compare desired vs live spec (including labels, annotations, replicas, spec fields).
-          - If any relevant field differs → Action = UPDATE.
-          - If identical → Action = NO CHANGE.
-
-        Drift summary:
-        - Only include CREATE/UPDATE in the summary table:
-
-          | Kind | Namespace | Name | Action |
-
-        - Never assume CREATE from a generic list. Always perform a direct existence check by kind/namespace/name.
+            ```
+            | Kind | Namespace | Name | Action |
+            ```
 
         3. Semantic Validation & Impact Prediction
         - For each resource with Action = CREATE or UPDATE:
@@ -225,19 +214,13 @@ spec:
         kind: RemoteMCPServer
         apiGroup: kagent.dev
         toolNames:
-        - k8s_check_service_connectivity
-        - k8s_get_events
-        - k8s_get_available_api_resources
         - k8s_get_cluster_configuration
         - k8s_describe_resource
         - k8s_get_resource_yaml
         - k8s_execute_command
         - k8s_get_resources
-        - k8s_get_pod_logs
         - helm_repo_add
         - helm_install
-        - helm_list
-        - helm_get
         - helm_upgrade
         - helm_repo_update
     - type: McpServer
