--- a/demo-cluster/.k8s-gen/kyverno/kyverno-mcp.yaml
+++ b/demo-cluster/.k8s-gen/kyverno/kyverno-mcp.yaml
@@ -11,7 +11,7 @@ spec:
     args:
       - --http-addr
       - :8000
-    image: ghcr.io/nirmata/kyverno-mcp:v0.2.2
+    image: ghcr.io/lucchmielowski/kyverno-mcp:v0.6.0
     port: 8000
   transportType: http
   httpTransport:
