update to match fork + remove agent
Signed-off-by: Luc Chmielowski <luc.chmielowski@nirmata.com>

--- a/demo-cluster/.bootstrap/app-of-apps.yaml
+++ b/demo-cluster/.bootstrap/app-of-apps.yaml
@@ -9,7 +9,7 @@ spec:
   project: default
   revisionHistoryLimit: 5
   source:
-    repoURL: https://github.com/qasmi/smart-idp.git
+    repoURL: https://github.com/lucchmielowski/smart-idp.git
     path: ./demo-cluster/.k8s-gen/
     targetRevision: HEAD
   destination:
