--- a/demo-cluster/.k8s-gen/platform-manifests.yaml
+++ b/demo-cluster/.k8s-gen/platform-manifests.yaml
@@ -49,7 +49,7 @@ spec:
     - server: https://kubernetes.default.svc
       namespace: kyverno
   sourceRepos:
-    - https://github.com/qasmi/smart-idp.git
+    - https://github.com/lucchmielowski/smart-idp.git
     - ghcr.io/kagent-dev/kagent/helm
     - https://jaegertracing.github.io/helm-charts
     - https://kyverno.github.io/kyverno
@@ -80,7 +80,7 @@ spec:
   goTemplate: true
   generators:
     - git:
-        repoURL: https://github.com/qasmi/smart-idp.git
+        repoURL: https://github.com/lucchmielowski/smart-idp.git
         revision: HEAD
         files:
           - path: "demo-cluster/team-platform/apps.yaml"
@@ -96,7 +96,7 @@ spec:
       project: '{{ .project }}'
       revisionHistoryLimit: 3
       sources:
-      - repoURL: https://github.com/qasmi/smart-idp.git
+      - repoURL: https://github.com/lucchmielowski/smart-idp.git
         targetRevision: HEAD
         ref: valuesRef
       destination:
@@ -113,7 +113,7 @@ spec:
             {{- range .valueFiles }}
               - $valuesRef/demo-cluster/team-platform/values/{{ . }}
             {{- end }}
-        - repoURL: 'https://github.com/qasmi/smart-idp.git'
+        - repoURL: 'https://github.com/lucchmielowski/smart-idp.git'
           targetRevision: 'HEAD'
           path: demo-cluster/team-platform/values
           ref: valuesRef
