--- a/demo-cluster/global.yaml
+++ b/demo-cluster/global.yaml
@@ -9,5 +9,5 @@ argocd:
   namespace: argocd
 
 gitops:
-  repository: https://github.com/qasmi/smart-idp.git
+  repository: https://github.com/lucchmielowski/smart-idp.git
   revisionHistoryLimit: 3
