--- a/playgrounds/kind/addons/gitops-repo.yaml
+++ b/playgrounds/kind/addons/gitops-repo.yaml
@@ -8,4 +8,4 @@ metadata:
         argocd.argoproj.io/secret-type: repository
 stringData:
     type: git
-    url: https://github.com/qasmi/smart-idp.git
+    url: https://github.com/lucchmielowski/smart-idp.git
