--- a/demo-cluster/.k8s-gen/app-manifests.yaml
+++ b/demo-cluster/.k8s-gen/app-manifests.yaml
@@ -3,51 +3,39 @@ kind: Namespace
 metadata:
   name: demo-oss-japan
 ---
-apiVersion: v1
-kind: ResourceQuota
+apiVersion: argoproj.io/v1alpha1
+kind: Application
 metadata:
-  name: demo-oss-japan-quota
-  namespace: demo-oss-japan
+  name: game-2048
+  namespace: argocd
 spec:
-  hard:
-    requests.cpu: "1"  
-    requests.memory: "1Gi" 
-    limits.cpu: "1"  
-    limits.memory: "2Gi"
----
-#apiVersion: argoproj.io/v1alpha1
-#kind: Application
-#metadata:
-#  name: game-2048
-#  namespace: argocd
-#spec:
-#  destination:
-#    namespace: demo-oss-japan
-#    server: https://kubernetes.default.svc
-#  project: user
-#  revisionHistoryLimit: 3
-#  sources:
-#  - chart: dao-2048
-#    helm:
-#      values: |
-#        nodeSelector:
-#          role: storage
-#
-#        tolerations:
-#          - key: role
-#            value: storage
-#            operator: Equal
-#            effect: NoSchedule
-#      
-#        service:
-#          type: LoadBalancer
-#
-#    repoURL: http://daocloud.github.io/dao-2048/
-#    targetRevision: "1.2.1"
-#  syncPolicy:
-#    automated:
-#      prune: true
-#      selfHeal: true
+  destination:
+    namespace: demo-oss-japan
+    server: https://kubernetes.default.svc
+  project: user
+  revisionHistoryLimit: 3
+  sources:
+  - chart: dao-2048
+    helm:
+      values: |
+        nodeSelector:
+          role: storage
+
+        tolerations:
+          - key: role
+            value: storage
+            operator: Equal
+            effect: NoSchedule
+      
+        service:
+          type: LoadBalancer
+
+    repoURL: http://daocloud.github.io/dao-2048/
+    targetRevision: "1.2.1"
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: AppProject
