--- a/demo-cluster/.k8s-gen/platform-manifests.yaml
+++ b/demo-cluster/.k8s-gen/platform-manifests.yaml
@@ -11,6 +11,35 @@ kind: Namespace
 metadata:
   name: kyverno
 ---
+# Source: gitops-chart/templates/namespace.yaml
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: demo
+---
+apiVersion: v1
+kind: AppProject
+metadata:
+  name: user
+  namespace: argocd
+spec:
+  description: Project user
+  destinations:
+    - server: https://kubernetes.default.svc
+      namespace: demo
+sourceRepos:
+  - https://github.com/lucchmielowski/smart-idp.git
+clusterResourceWhitelist:
+  - group: rbac.authorization.k8s.io
+    kind: ClusterRoleBinding
+  - group: rbac.authorization.k8s.io
+    kind: ClusterRole
+  - group: apiextensions.k8s.io
+    kind: CustomResourceDefinition
+  - group: admissionregistration.k8s.io
+    kind: ValidatingWebhookConfiguration
+  - group: admissionregistration.k8s.io
+---
 # Source: gitops-chart/templates/project.yaml
 apiVersion: argoproj.io/v1alpha1
 kind: AppProject
@@ -24,6 +53,8 @@ spec:
       namespace: argocd
     - server: https://kubernetes.default.svc
       namespace: kyverno
+    - server: https://kubernetes.default.svc
+      namespace: demo
   sourceRepos:
     - https://github.com/lucchmielowski/smart-idp.git
     - https://kyverno.github.io/kyverno
