fix agent drift and kyverno analycis

--- a/demo-cluster/.k8s-gen/gitops-kyverno-agent.yaml
+++ b/demo-cluster/.k8s-gen/gitops-kyverno-agent.yaml
@@ -146,6 +146,8 @@ spec:
           * Impact
           * Mitigation
 
+        * Kyverno policy analysis
+
       5. PR Review Submission
 
         * Always post the final report as a GitHub PR comment.
