--- a/demo-cluster/.k8s-gen/app-manifest.yaml
+++ b/demo-cluster/.k8s-gen/app-manifest.yaml
@@ -13,19 +13,21 @@ spec:
   - chart: dao-2048
     helm:
       values: |
+        replicaCount: 1
+
+        resources: 
+          limits:
+            cpu: 500m
+            memory: 128Mi
+          requests:
+            cpu: 100m
+            memory: 128Mi
+
         nodeSelector:
-          role: storage
-        tolerations:
-          - key: role
-            value: storage
-            operator: Equal
-            effect: NoSchedule
-      
+          kubernetes.io/hostname: kind-worker
+        
         service:
           type: LoadBalancer
-
-        imagePullSecrets: 
-          - game-2048-pull-secret
 
     repoURL: http://daocloud.github.io/dao-2048/
     targetRevision: "1.2.1"
