--- a/demo-cluster/.k8s-gen/platform-manifests.yaml
+++ b/demo-cluster/.k8s-gen/platform-manifests.yaml
@@ -9,36 +9,13 @@ metadata:
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: kyverno
+  name: demo
 ---
 # Source: gitops-chart/templates/namespace.yaml
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: demo
----
-apiVersion: v1
-kind: AppProject
-metadata:
-  name: user
-  namespace: argocd
-spec:
-  description: Project user
-  destinations:
-    - server: https://kubernetes.default.svc
-      namespace: demo
-sourceRepos:
-  - https://github.com/lucchmielowski/smart-idp.git
-clusterResourceWhitelist:
-  - group: rbac.authorization.k8s.io
-    kind: ClusterRoleBinding
-  - group: rbac.authorization.k8s.io
-    kind: ClusterRole
-  - group: apiextensions.k8s.io
-    kind: CustomResourceDefinition
-  - group: admissionregistration.k8s.io
-    kind: ValidatingWebhookConfiguration
-  - group: admissionregistration.k8s.io
+  name: kyverno
 ---
 # Source: gitops-chart/templates/project.yaml
 apiVersion: argoproj.io/v1alpha1
@@ -53,8 +30,6 @@ spec:
       namespace: argocd
     - server: https://kubernetes.default.svc
       namespace: kyverno
-    - server: https://kubernetes.default.svc
-      namespace: demo
   sourceRepos:
     - https://github.com/lucchmielowski/smart-idp.git
     - https://kyverno.github.io/kyverno
@@ -73,6 +48,21 @@ spec:
       kind: APIService
     - group: scheduling.k8s.io
       kind: PriorityClass
+---
+# Source: gitops-chart/templates/project.yaml
+apiVersion: argoproj.io/v1alpha1
+kind: AppProject
+metadata:
+  name: user
+  namespace: argocd
+spec:
+  description: Project user
+  destinations:
+    - server: https://kubernetes.default.svc
+      namespace: demo
+  sourceRepos:
+    - http://daocloud.github.io/dao-2048/
+  clusterResourceWhitelist: []
 ---
 # Source: gitops-chart/templates/applicationSet.yaml
 apiVersion: argoproj.io/v1alpha1
