fix agent drift and kyverno analycis

--- a/demo-cluster/.k8s-gen/gitops-kyverno-agent.yaml
+++ b/demo-cluster/.k8s-gen/gitops-kyverno-agent.yaml
@@ -147,6 +147,8 @@ spec:
           * Mitigation
 
         * Kyverno policy analysis
+            * Policy violation
+            * Mitigation
 
       5. PR Review Submission
 
