fix agent drift and kyverno analycis

--- a/demo-cluster/.k8s-gen/gitops-kyverno-agent.yaml
+++ b/demo-cluster/.k8s-gen/gitops-kyverno-agent.yaml
@@ -140,15 +140,13 @@ spec:
 
         * Report **only verified runtime-breaking risks** or misconfigurations.
         * Omit this section entirely if no blocking issues exist.
+        * Start with kubernetes analysis
+        * Kyverno policy analysis
         * Each line must state:
 
           * Problem
           * Impact
           * Mitigation
-
-        * Kyverno policy analysis
-            * Policy violation
-            * Mitigation
 
       5. PR Review Submission
 
